--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,15 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
+cards
+cards_augmented
+cards_dataset.csv
+augmented_label_encoders.json
+*.csv
+dataset_report.json
+model_info.json
+test_results.png
+training_history.png
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
