feat: add noise augmentation and improve data handling

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ training_history.png
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
+*.npy
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
